--- a/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<EquiposTecnicosSN.Entities.Equipos.Equipo>
+﻿@using EquiposTecnicosSN.Web.CustomExtensions
+@model IEnumerable<EquiposTecnicosSN.Entities.Equipos.Equipo>
 
 @{
     ViewBag.Title = "Equipos";
@@ -30,6 +31,7 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Ubicacion)
                             </th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -38,7 +40,7 @@
                         {
                             <tr>
                                 <td>
-                                    @item.Tipo()
+                                    @item.Tipo().DisplayName()
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.NombreCompleto)
@@ -47,10 +49,22 @@
                                     @Html.DisplayFor(modelItem => item.UMDNS)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Estado)
+                                    @item.Estado.DisplayName()
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Ubicacion.Nombre)
+                                </td>
+                                <td>
+                                    <a class="btn btn-default btn-xs btn-list"
+                                       href="@Url.Action("Edit", item.WebController(), new { id = item.EquipoId })"
+                                       title="Editar Equipo">
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                    </a>
+                                    <a class="btn btn-default btn-xs btn-list"
+                                       href="@Url.Action("Details", item.WebController(), new { id = item.EquipoId })"
+                                       title="Ver Equipo">
+                                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                    </a>
                                 </td>
                             </tr>
                         }
