--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/OrdenDeTrabajoMantenimientoCorrectivo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/OrdenDeTrabajoMantenimientoCorrectivo.cshtml
@@ -48,14 +48,14 @@
                         </div>
 
                         <div class="form-group">
-                                <label>&nbsp;
+                                <label>
                                     @if (Model.FechaCierre != null)
                                     {
                                         @Html.DisplayNameFor(model => model.FechaCierre)
                                         @Html.HiddenFor(model => model.FechaCierre)
                                     }   
                                 </label>
-                                <p class="form-control-static">&nbsp;
+                                <p class="form-control-static">
                                     @if (Model.FechaCierre != null)
                                     {
                                         @Html.DisplayFor(model => model.FechaCierre)
@@ -137,7 +137,9 @@
                     </div>
                 }
 
-                @if (Model.Observaciones != null)
+                @*
+                    
+                if (Model.Observaciones != null)
                 {
                     <hr />
                     <div class="row">
@@ -149,6 +151,8 @@
                         </div>
                     </div>
                 }
+                *@
+                @Html.Partial("_ListObservaciones", Model)
 
                 @if (Model.FechaCierre != null)
                 {
