--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
@@ -31,9 +31,7 @@
                            data-val-maxlength-max="255" data-val-required="The UMDNS field is required."
                            id="UMDNS"
                            name="UMDNS" type="text" value="@Model.UMDNS">
-                    @*
-                    Html.EditorFor(model => model.UMDNS, new { htmlAttributes = new { @class = "form-control" } })
-                    *@
+                    
                     @Html.ValidationMessageFor(model => model.UMDNS, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
@@ -48,6 +46,11 @@
                     @Html.LabelFor(model => model.UbicacionId, "Ubicación", htmlAttributes: new { @class = "control-label" })
                     @Html.DropDownList("UbicacionId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.UbicacionId, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.SectorId, "Sector", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("SectorId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SectorId, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.NumeroMatricula, htmlAttributes: new { @class = "control-label" })
