--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Web.Models.BuscarEquipoViewModel
+﻿@model EquiposTecnicosSN.Web.Models.HomeViewModel
 @{
     ViewBag.Title = "Inicio";
 }
@@ -101,6 +101,7 @@
     </div>
 
 </div>
+<!-- BUSCAR EQUIPO -->
 <hr />
 <div class="row">
     <div class="col-lg-12">
@@ -108,7 +109,7 @@
             <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar equipo</div>
 
             <div class="panel-body">
-                <form id="FormBuscar" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "Home")" data-nqn-target="#searchResults">
+                <form id="FormBuscarEquipo" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "Home")" data-nqn-target="#searchEquipoResults">
 
                     @Html.AntiForgeryToken()
                     <div class="row">
@@ -139,8 +140,8 @@
 
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
-                                @Html.EnumDropDownListFor(model => model.Estado, "Todos", htmlAttributes: new { @class = "form-control" })
+                                <label class="control-label">Estado</label>
+                                @Html.EnumDropDownListFor(model => model.EstadoEquipo, "Todos", htmlAttributes: new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -161,15 +162,64 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input id="BuscarEquipo" type="submit" value="Buscar" class="btn btn-primary" />
+                                <input id="buscarEquipo" type="submit" value="Buscar" class="btn btn-primary" />
                             </div>
                         </div>
                     </div>
                 </form>
                 <div class="row">
                     <div class="col-lg-12">                       
-                       <div id="searchResults">
+                       <div id="searchEquipoResults">
                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- BUSCAR ODT -->
+<hr />
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo</div>
+
+            <div class="panel-body">
+                <form id="FormBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "Home")" data-nqn-target="#searchODTResults">
+
+                    @Html.AntiForgeryToken()
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label">Nº Referencia</label>
+
+                                <input class="form-control text-box single-line"
+                                       id="buscarNumeroReferencia"
+                                       name="buscarNumeroReferencia" type="text" value="">
+
+                            </div>
+
+                        </div>
+                        <div class="col-md-6">                           
+                            <div class="form-group">
+                                <label class="control-label">Estado</label>
+                                @Html.EnumDropDownListFor(model => model.EstadoODT, "Todos", htmlAttributes: new { @class = "form-control" })
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary" />
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div id="searchODTResults">
+                        </div>
                     </div>
                 </div>
             </div>
